--- a/_posts/2024-12-4-Blog-Post-3.md
+++ b/_posts/2024-12-4-Blog-Post-3.md
@@ -7,7 +7,7 @@ image: "/assets/img/sports_header.jpg"
 display_image: false  # change this to true to display the image below the banner 
 ---
 
-<p class="intro"><span class="dropcap">I</span>n my previous post I looked into NBA player specific data, regarding Plus/Minus.  With the help of my streamlit app, I've been able to explore new trends between many other statistics that help teams win games.  Through this streamlit app, you'll be able to make new discoveries into your favorite teams and players.</p>
+<p class="intro"><span class="dropcap">I</span>n my previous post I looked into NBA player specific data regarding Plus/Minus.  With the help of my streamlit app, I've been able to explore new trends between many other statistics that help teams win games.  Through this streamlit app, you'll be able to make new discoveries into your favorite teams and players.</p>
 
 
 ## Introduction
@@ -16,15 +16,19 @@ This streamlit app was created to continue exploratory data analysis into specif
 
 ## Motivating Question
 
-What has motivated me to continue analysis on NBA statistics is if there is a singular stat, combination of stats, or mismatch of opponent stats that best attribute to outscoring an opponent.  If there is a way to get an edge over an opponent in an NBA game, this would be extremely valuable to a team's front office.  This has always intrigued me and being able to work in the NBA as an analyst would be my dream job.  Creating this app has allowed me to produce a deliverable in which teams can extract information based on their own needs.  This could possibly attribute to future work in the NBA if deemed valuable.
+Finding a connection between a singular stat, combination of stats, or mismatch of opponent stats that best attribute to outscoring an opponent has motivated me to build this app.  This search for connection has intrigued me and being able to work in the NBA as an analyst would be my dream job. Finding a way to obtain an edge over an opponent in an NBA game would be extremely valuable to a team's front office.  Creating this app has allowed me to produce a deliverable in which teams can extract information based on their own needs, which could hopefully lead to future work for an NBA team!
 
 ## My Streamlit App
 
-My [Streamlit App](https://nba-player-statistics-blog-3.streamlit.app/) can show you the basic stats for your basic questions.  I have broken it down into 3 tabs; summary statistics, visual analysis in the form of a bar chart, and player comparison in the form of a radar chart.  At the bottom of each tab, there is an expandable summary statistics table that can show you the numbers behind what you are visually seeing.  
+My [Streamlit App](https://nba-player-statistics-blog-3.streamlit.app/) can show you the basic stats for your basic questions.  I have broken it down into 3 tabs; summary statistics, visual analysis in the form of a bar chart, and player comparison in the form of a radar chart.  
+
+At the bottom of each tab, there is an expandable summary statistics table that can show you the numbers behind what you are visually seeing.  
+
+There is a filter that can be applied to this each tab which can drill down by teams as well as games played by these players.
 
 ### Tab 1 - Summary
 
-The first tab shows you a summary of NBA player specific stats.  You are able to see the mean, standard deviation, min/max, and different quartiles of each of the most important stats for an individual player.  There is a filter that can be applied to this first tab that can drill down by teams as well as games played by these players.
+The first tab shows you a summary of NBA player specific stats.  You are able to see the mean, standard deviation, min/max, and different quartiles of each of the most important stats for an individual player.  In the screenshot below, I've filtered only teams in the Northeast division who have played 30 games.  This could be insightful to compare individual players within this division to the averages from it.
 
 <figure>
 	<img src="https://eladle21.github.io/my-blog/assets/img/summary_stats.png" alt=""> 
@@ -51,7 +55,7 @@ The last tab is to compare two individual players on 6 of the most important ind
 
 ## Key Insights
 
-One key insight is comparing two players directly to each other.  I compared two very different players in the image above found in tab 3.  Rudy Gobert is a center known for defense, Trae Young is a point guard known for offense.  They have two very different play styles and I thought it would be interesting to see their comparison in the radar chart.
+One key insight I've gained from this app was from comparing two players directly to each other.  I compared two very different players in the image above found in tab 3.  Rudy Gobert is a center known for defense, Trae Young is a point guard known for offense.  They have two very different play styles and I thought it would be interesting to see their comparison in the radar chart.
 
 You can see with their one dimensional distribution in the radar chart that their play styles are also one dimensional and they focus on their respective strengths.  I organized the radar chart so that complimentary stats were opposite to each other, like blocks to rebounds and turnovers to assists.  This allows for interesting individual player insight as well as play style comparison between two players like Rudy Gobert and Trae Young.
 
@@ -65,7 +69,7 @@ For those who want another tool similar to tab 3, or player comparison, there's 
 
 ## Conclusion
 
-This streamlit app is a wonderful tool to dive into EDA for NBA players and teams.  While my initial question was regarding individual performance of NBA players, as shown in their Plus/Minus statistic, this tool is able to provide insight into this stat as well as many other basic individual statistics.  It can answer questions from "how does my favorite player's play style compare to this player" or "what is this team's play style shown by their average players stat distribution?"  This app was built to enable insight to your wildest questions, so go get after it and enable yourself with information that teams would pay big money for!
+This streamlit app is a wonderful tool to dive into EDA for NBA players and teams.  While my initial question was regarding individual performance of NBA players, as shown in their Plus/Minus statistic, this tool is able to provide insight into this stat as well as many other basic individual statistics.  It can answer questions from "how does my favorite player's play style compare to this player" or "what is this team's play style, as shown by their average players stat distribution?"  This app was built to enable insight to your wildest questions, so get after it and enable yourself with information that teams would pay big money for!
 
 ### Link to GitHub code
 
